--- a/doc/Documentazione.tex
+++ b/doc/Documentazione.tex
@@ -417,6 +417,10 @@ Insieme a questo documento in formato PDF viene fornito anche il codice \LaTeX  
                 \item Gestire diversamente i catch delle Exception, poiché non sempre appaiono errori rispetto all'utente;
                 \item Eliminare gli scroll pane laterali o definirli in maniera migliore;
                 \item Allargare le dimensioni dei bottoni in cui non si leggono le scritte
+                \item Migliorare il controllo dei campi username e password di Login
+                \item Aumentare la dimensione degli scroll pane
+                \item Inserire un tooltip o un help come guida all'inserimento di un report
+                \item Migliorare i controlli nel caso di inserimenti di campi vuoti per \textit{Risk Factor}
             \end{itemize}
         \paragraph*{Nota} Tutte le osservazioni fatte sono state prese in carico e messe in atto, tranne il controllo dell'anno di nascita dei pazienti rispetto all'inserimento di vaccinazioni, reazioni, ecc. ai quali non si è riusciti a porre rimedio.
     \newpage
