--- a/doc/UserTest/DocTest.tex
+++ b/doc/UserTest/DocTest.tex
@@ -171,7 +171,7 @@
             si scelga il vaccino \textit{Moderna}
         \item Apparirà un nuovo bottone per scegliere il tipo di somministrazione, si clicchi su: \textit{Dose booster}
         \item Inserire nei campi di testo:\\
-            Sito della vaccinazione: \textit{Torino}, Data della vaccinazione: \textit{6/20/2022}
+            Sito della vaccinazione: \textit{Torino}, Data della vaccinazione: \textit{20 giugno 2022}
         \item Cliccare su conferma.
         \item Verificare nuovamente le informazioni inserite dalla pagina di visualizzazione dei pazienti.
         \item Tornare alla pagina iniziale.
